adding dto for key create